multiple video streaming

--- a/momo_sender.html
+++ b/momo_sender.html
@@ -14,14 +14,14 @@
         <option value="VP9">VP9</option>
         <option value="AV1">AV1</option>
       </select>
-      <input type="button" onclick="connect_momo();" value="Connect momo">
-      <input type="button" onclick="disconnect_momo();" value="Disconnect momo">
+      <input type="button" onclick="connectMomo();" value="Connect momo">
+      <input type="button" onclick="disconnectMomo();" value="Disconnect momo">
 
-      <input type="button" onclick="connect_receiver();" value="Connect receiver">
-      <input type="button" onclick="disconnect_receiver();" value="Disconnect receiver">
+      <input type="button" onclick="connectReceiver();" value="Connect receiver">
+      <input type="button" onclick="disconnectReceiver();" value="Disconnect receiver">
 
-      <input type="button" onclick="play();" value="Play">
-      <input type="text" id="data_text">
+      ルームid
+      <input type="text" id="room_id">
     </div>
     <div>
       <video id="remote_video" autoplay style="border: 3px solid gray;"></video>
